--- a/chess-rest/src/main/webapp/WEB-INF/web.xml
+++ b/chess-rest/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>com.dimar.chess.rest</param-value>
+			<param-value>com.dim.chess.rest</param-value>
 		</init-param>
   </servlet>
   
