--- a/chess-rest/src/main/webapp/WEB-INF/web.xml
+++ b/chess-rest/src/main/webapp/WEB-INF/web.xml
@@ -13,10 +13,10 @@
   <servlet>
   	<servlet-name>jersey</servlet-name>
   	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-		<init-param>
+		<!-- <init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
 			<param-value>com.dim.chess.rest</param-value>
-		</init-param>
+		</init-param> -->	
   </servlet>
   
   <servlet-mapping>
