--- a/chess-rest/pom.xml
+++ b/chess-rest/pom.xml
@@ -12,15 +12,9 @@
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.1.0</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
-<dependency>
-    <groupId>javax.enterprise</groupId>
-    <artifactId>cdi-api</artifactId>
-    <version>1.2</version>
-</dependency>
+	</dependency>	
   	<dependency>
-  		<groupId>com.dimar.chess.core</groupId>
+  		<groupId>com.dim.chess.core</groupId>
   		<artifactId>chess-core</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
@@ -28,12 +22,6 @@
 		<groupId>com.sun.jersey</groupId>
 		<artifactId>jersey-server</artifactId>
 		<version>1.9</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax</groupId>
-	    <artifactId>javaee-api</artifactId>
-	    <version>7.0</version>
-	    <scope>provided</scope>
 	</dependency>
   </dependencies>
   
