--- a/chess-rest/pom.xml
+++ b/chess-rest/pom.xml
@@ -8,6 +8,13 @@
   <description>chess rest</description>
  
   <dependencies>
+
+  	<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
+	<dependency>
+	    <groupId>javax.enterprise</groupId>
+	    <artifactId>cdi-api</artifactId>
+	    <version>1.2</version>
+	</dependency>
   	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
