--- a/chess-rest/src/main/webapp/WEB-INF/web.xml
+++ b/chess-rest/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     <welcome-file>default.jsp</welcome-file>   
   </welcome-file-list>
   
-  <servlet>
+  <!-- <servlet>
   	<servlet-name>jersey</servlet-name>
   	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
@@ -31,7 +31,7 @@
   <servlet-mapping>
   	<servlet-name>jersey</servlet-name>
   	<url-pattern>/ws/*</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   
   
 </web-app>
