--- a/chess-rest/pom.xml
+++ b/chess-rest/pom.xml
@@ -7,8 +7,12 @@
   <name>chess rest</name>
   <description>chess rest</description>
  
+ <properties>
+ 	<jersey.version>1.19.3</jersey.version>
+ 	<jersey.test.version>2.22.1</jersey.test.version>
+ </properties>
+ 
   <dependencies>
-
   	<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
 	<dependency>
 	    <groupId>javax.enterprise</groupId>
@@ -28,8 +32,29 @@
   	<dependency>
 		<groupId>com.sun.jersey</groupId>
 		<artifactId>jersey-server</artifactId>
-		<version>1.9</version>
+		<version>${jersey.version}</version>
 	</dependency>
+	<!-- testing jersey rest -->
+    <dependency>
+        <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+        <artifactId>jersey-test-framework-provider-jetty</artifactId>
+        <version>${jersey.test.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- mockito -->
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-all</artifactId>
+  		<version>1.9.5</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<!-- junit -->
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
   
   <build>
