--- a/chess-rest/pom.xml
+++ b/chess-rest/pom.xml
@@ -25,8 +25,8 @@
 	    <version>3.1.0</version>
 	</dependency>	
   	<dependency>
-  		<groupId>com.dim.chess.core</groupId>
-  		<artifactId>chess-core</artifactId>
+  		<groupId>com.dim.chess.ai</groupId>
+  		<artifactId>chess-ai</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   	<!-- <dependency>
@@ -69,10 +69,11 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+         	<source>1.8</source>
+          	<target>1.8</target>          	
         </configuration>
       </plugin>
     </plugins>
+    <finalName>chess-rest</finalName>
   </build>
 </project>
