add in pom.xml dependency springframework web, change ChessGamePool to use PlayerConnectAI

--- a/chess-rest/pom.xml
+++ b/chess-rest/pom.xml
@@ -13,6 +13,12 @@
  </properties>
  
   <dependencies>
+  	<!-- use rest template Spring -->
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>4.3.3.RELEASE</version>
+  	</dependency>
   	<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
 	<dependency>
 	    <groupId>javax.enterprise</groupId>
